--- a/css/app.css
+++ b/css/app.css
@@ -4,6 +4,33 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+/*element.style {
+}
+
+#strom-app {
+    display: none;
+}
+
+#strom-app {
+    display: block !important;
+}
+*/
+body {
+    margin: 0;
+    /* position: relative; */
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+/*    overflow-x: hidden;*/
+    overflow-y: auto;
+    color: #2f3943;
+    background-color: #f2f3f6;
+}
+/*div.dataTables_wrapper {
+    width: auto;
+    margin: 0 auto;
+}
+*/
 h1:focus {
     outline: none;
 }
